# crazyflie_hardware

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/broadcaster_interface/: CMakeLists.txt  package.xml
src/broadcaster_interface/srv/: PosiPoseBroadcastObject.srv
src/broadcaster_interfaces/: CMakeLists.txt  package.xml
src/broadcaster_interfaces/srv/: PosiPoseBroadcastObject.srv
src/crazyflie_hardware/: package.xml  setup.cfg  setup.py
src/crazyflie_hardware/crazyflie_hardware/: broadcaster.py  crazyflie.py
src/crazyflie_hardware/crtp_driver/: basic_commander.py  console.py  crtp_link_ros.py  crtp_packer_ros.py  generic_commander.py  high_level_commander.py  link_layer.py  localization.py  logging.py  parameters.py
src/crazyflie_hardware_cpp/: CMakeLists.txt  package.xml
src/crazyflie_hardware_cpp/include/crazyflie_hardware_cpp/: crtp_link_ros.hpp
src/crazyflie_hardware_cpp/include/crazyflie_hardware_cpp/crtp_driver_cpp/: console.hpp  generic_commander.hpp  hl_commander.hpp  localization.hpp  logblock.hpp  logging.hpp  parameters.hpp
src/crazyflie_hardware_cpp/src/: broadcaster.cpp  crazyflie.cpp  crtp_link_ros.cpp
src/crazyflie_hardware_cpp/src/crtp_driver_cpp/: console.cpp  generic_commander.cpp  hl_commander.cpp  localization.cpp  logblock.cpp  logging.cpp  parameters.cpp
src/crazyflie_hardware_examples/: package.xml  setup.cfg  setup.py
src/crazyflie_hardware_examples/crazyflie_hardware_examples/: radio_listener.py  radio_mock.py
src/crazyflie_hardware_examples/launch/: crazy.launch.py  crazyradio.launch.py
src/crazyflie_hardware_gateway/: package.xml  setup.cfg  setup.py
src/crazyflie_hardware_gateway/crazyflie_hardware_gateway/: gateway.py
src/crazyflie_hardware_gateway/launch/: crazyflieTypes.yaml  crazyflie_hardware_gateway.launch.py
src/crazyflie_hardware_gateway_components/: CMakeLists.txt  package.xml
src/crazyflie_hardware_gateway_components/src/: gateway.cpp
src/crazyflie_hardware_gateway_interfaces/: CMakeLists.txt  package.xml
src/crazyflie_hardware_gateway_interfaces/srv/: AddCrazyflie.srv  Crazyflie.srv  RemoveCrazyflie.srv
src/crazyflie_interface/: CMakeLists.txt  package.xml
src/crazyflie_server/: package.xml  setup.py
src/crazyflie_server/crazyflie_server/: server.py
src/crazyflie_server/launch/: crazyflie_server.launch.py
src/crazyflie_server_interfaces/: CMakeLists.txt  package.xml
src/crazyradio/: CMakeLists.txt  package.xml
src/crazyradio/src/: crazyradio_node.cpp
src/crazyradio_cpp/: CMakeLists.txt  package.xml
src/crazyradio_cpp/src/: crazyradio.cpp  crazyradio_node.cpp
src/crtp/: package.xml  setup.py
src/crtp/crtp/: __init__.py  crtp_link.py
src/crtp_cpp/: CMakeLists.txt  old.txt  package.xml
src/crtp_cpp/crtp_link/: CMakeLists.txt  crtp_link.cpp
src/crtp_cpp/crtp_logic/: CMakeLists.txt  basic_commander_logic.cpp  console_logic.cpp  generic_commander_logic.cpp  hl_commander_logic.cpp  link_layer_logic.cpp  localization_logic.cpp  logging_logic.cpp  logic.cpp  parameters_logic.cpp  toc_logic.cpp
src/crtp_cpp/crtp_packer/: CMakeLists.txt  basic_commander_packer.cpp  console_packer.cpp  crtp_packer.cpp  generic_commander_packer.cpp  link_layer_packer.cpp  (+5 more)
src/crtp_cpp_test/: CMakeLists.txt  package.xml
src/crtp_driver/: package.xml  setup.cfg  setup.py
src/crtp_interface/: CMakeLists.txt
src/crtp_interfaces/: CMakeLists.txt  package.xml
(+225 files in other folders)
